--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,14 @@
     <groupId>de.cloudypanda</groupId>
     <artifactId>pandorus</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>pandorus</name>
     <description>pandorus</description>
+    <modules>
+        <module>tempchannel</module>
+        <module>core</module>
+        <module>database</module>
+    </modules>
     <properties>
         <java.version>20</java.version>
     </properties>
@@ -42,6 +48,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.dv8tion</groupId>
+            <artifactId>JDA</artifactId>
+            <version>5.0.0-beta.8</version>
         </dependency>
     </dependencies>
 
