--- a/database/pom.xml
+++ b/database/pom.xml
@@ -8,6 +8,7 @@
     </parent>
 
     <artifactId>database</artifactId>
+    <version>${project.parent.version}</version>
     <packaging>jar</packaging>
 
     <name>database</name>
@@ -27,6 +28,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
         </dependency>
     </dependencies>
 </project>
