--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>tempchannel</module>
         <module>core</module>
         <module>database</module>
+        <module>assembly</module>
     </modules>
     <properties>
         <java.version>20</java.version>
@@ -61,16 +62,24 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
+                    <classifier>exec</classifier>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <mainClass>de.cloudypanda.PandorusApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
 </project>
