--- a/tempchannel/pom.xml
+++ b/tempchannel/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>tempchannel</artifactId>
-    <version>1</version>
+    <version>${project.parent.version}</version>
     <packaging>jar</packaging>
 
     <name>tempchannel</name>
@@ -29,7 +29,6 @@
             <groupId>de.cloudypanda</groupId>
             <artifactId>database</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
