Added first implementation of serverinfo command

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -38,5 +38,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>de.cloudypanda</groupId>
+            <artifactId>serverinfo</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
