--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,9 +13,8 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Build the hello-docker Docker image
+    - name: Build the Docker image
       run: |
          docker build . --tag ghcr.io/sleepypxnda/pandorus:latest
-         docker run ghcr.io/sleepypxnda/pandorus:latest
          docker push ghcr.io/sleepypxnda/pandorus:latest
        
